WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152048
[CoordinatedGraphics][EFL] Fix unhandled web process message when launching MiniBrowser
https://bugs.webkit.org/show_bug.cgi?id=152048
Summary
[CoordinatedGraphics][EFL] Fix unhandled web process message when launching M...
Ryuan Choi
Reported
2015-12-09 02:00:09 PST
When launched MiniBrowser, there is below error message. ERROR: Unhandled web process message 'WebPage:PreferencesDidChange' It's because EwkView update preferences before initializing WebPage in WebView constructor.
Attachments
Patch
(6.13 KB, patch)
2015-12-09 02:03 PST
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
Patch
(6.45 KB, patch)
2015-12-09 04:24 PST
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2015-12-09 02:03:32 PST
Created
attachment 266978
[details]
Patch
Gyuyoung Kim
Comment 2
2015-12-09 02:40:12 PST
Comment on
attachment 266978
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=266978&action=review
> Source/WebKit2/ChangeLog:3 > + [EFL] Fix unhandled web process message when launching MiniBrowser
Please add [CoordinatedGrahics] for more clarity as well.
> Source/WebKit2/UIProcess/API/efl/EwkView.cpp:334 > + WKViewSetIsActive(wkView(), true);
If we don't need to initialize view here, it seems to me "WKViewSetIsActive()" is also unnecessary work. I think this work should be done in Source/WebKit2/UIProcess/CoordinatedGraphics/WebView.cpp:60 line. Why can't we do it in WebView::WebView() ?
Ryuan Choi
Comment 3
2015-12-09 02:51:04 PST
(In reply to
comment #2
)
> Comment on
attachment 266978
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=266978&action=review
> > > Source/WebKit2/ChangeLog:3 > > + [EFL] Fix unhandled web process message when launching MiniBrowser > > Please add [CoordinatedGrahics] for more clarity as well. >
OK.
> > Source/WebKit2/UIProcess/API/efl/EwkView.cpp:334 > > + WKViewSetIsActive(wkView(), true); > > If we don't need to initialize view here, it seems to me > "WKViewSetIsActive()" is also unnecessary work. I think this work should be > done in Source/WebKit2/UIProcess/CoordinatedGraphics/WebView.cpp:60 line. > Why can't we do it in WebView::WebView() ?
No. WebPage can be initialized without active state in CoordinatedGraphics system although EFL port initializes WebView with active state.
Gyuyoung Kim
Comment 4
2015-12-09 03:02:02 PST
Comment on
attachment 266978
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=266978&action=review
>>> Source/WebKit2/UIProcess/API/efl/EwkView.cpp:334 >>> + WKViewSetIsActive(wkView(), true); >> >> If we don't need to initialize view here, it seems to me "WKViewSetIsActive()" is also unnecessary work. I think this work should be done in Source/WebKit2/UIProcess/CoordinatedGraphics/WebView.cpp:60 line. Why can't we do it in WebView::WebView() ? > > No. WebPage can be initialized without active state in CoordinatedGraphics system although EFL port initializes WebView with active state.
I mean why we should call WKViewSetIsActive() here even though you remove WKViewInitialize(). Your patch delegates the initialization to the WebView ctor. I wonder why we still need to call WKViewSetIsActive() here. Can't we delegate this to the WebView ctor as well ?
Gyuyoung Kim
Comment 5
2015-12-09 03:18:54 PST
Comment on
attachment 266978
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=266978&action=review
>>>> Source/WebKit2/UIProcess/API/efl/EwkView.cpp:334 >>>> + WKViewSetIsActive(wkView(), true); >>> >>> If we don't need to initialize view here, it seems to me "WKViewSetIsActive()" is also unnecessary work. I think this work should be done in Source/WebKit2/UIProcess/CoordinatedGraphics/WebView.cpp:60 line. Why can't we do it in WebView::WebView() ? >> >> No. WebPage can be initialized without active state in CoordinatedGraphics system although EFL port initializes WebView with active state. > > I mean why we should call WKViewSetIsActive() here even though you remove WKViewInitialize(). Your patch delegates the initialization to the WebView ctor. I wonder why we still need to call WKViewSetIsActive() here. Can't we delegate this to the WebView ctor as well ?
Though I still don't like to call WKViewSetIsActive() again, I don't object to call it to go ahead to refactor. But please mention why we still have to call WKviewSetIsActive() in ChangeLog.
Gyuyoung Kim
Comment 6
2015-12-09 03:19:34 PST
rs=me.
Ryuan Choi
Comment 7
2015-12-09 04:24:55 PST
Created
attachment 266990
[details]
Patch
Ryuan Choi
Comment 8
2015-12-09 04:25:52 PST
(In reply to
comment #5
)
> Comment on
attachment 266978
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=266978&action=review
> > >>>> Source/WebKit2/UIProcess/API/efl/EwkView.cpp:334 > >>>> + WKViewSetIsActive(wkView(), true); > >>> > >>> If we don't need to initialize view here, it seems to me "WKViewSetIsActive()" is also unnecessary work. I think this work should be done in Source/WebKit2/UIProcess/CoordinatedGraphics/WebView.cpp:60 line. Why can't we do it in WebView::WebView() ? > >> > >> No. WebPage can be initialized without active state in CoordinatedGraphics system although EFL port initializes WebView with active state. > > > > I mean why we should call WKViewSetIsActive() here even though you remove WKViewInitialize(). Your patch delegates the initialization to the WebView ctor. I wonder why we still need to call WKViewSetIsActive() here. Can't we delegate this to the WebView ctor as well ? > > Though I still don't like to call WKViewSetIsActive() again, I don't object > to call it to go ahead to refactor. But please mention why we still have to > call WKviewSetIsActive() in ChangeLog.
I don't like it too. Because of it, we can't make an inactive ewk_view. Then, how about adding FIXME to move it to some better place in the different bug? Anyway, I think that initializing ewk_view without active state is different issue from this bug.
Gyuyoung Kim
Comment 9
2015-12-09 04:28:42 PST
(In reply to
comment #8
)
> (In reply to
comment #5
) > > Comment on
attachment 266978
[details]
> > Patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=266978&action=review
> > > > >>>> Source/WebKit2/UIProcess/API/efl/EwkView.cpp:334 > > >>>> + WKViewSetIsActive(wkView(), true); > > >>> > > >>> If we don't need to initialize view here, it seems to me "WKViewSetIsActive()" is also unnecessary work. I think this work should be done in Source/WebKit2/UIProcess/CoordinatedGraphics/WebView.cpp:60 line. Why can't we do it in WebView::WebView() ? > > >> > > >> No. WebPage can be initialized without active state in CoordinatedGraphics system although EFL port initializes WebView with active state. > > > > > > I mean why we should call WKViewSetIsActive() here even though you remove WKViewInitialize(). Your patch delegates the initialization to the WebView ctor. I wonder why we still need to call WKViewSetIsActive() here. Can't we delegate this to the WebView ctor as well ? > > > > Though I still don't like to call WKViewSetIsActive() again, I don't object > > to call it to go ahead to refactor. But please mention why we still have to > > call WKviewSetIsActive() in ChangeLog. > > I don't like it too. > Because of it, we can't make an inactive ewk_view. > Then, how about adding FIXME to move it to some better place in the > different bug? > > Anyway, I think that initializing ewk_view without active state is different > issue from this bug.
Ok, I see.
WebKit Commit Bot
Comment 10
2015-12-09 06:00:23 PST
Comment on
attachment 266990
[details]
Patch Clearing flags on attachment: 266990 Committed
r193827
: <
http://trac.webkit.org/changeset/193827
>
WebKit Commit Bot
Comment 11
2015-12-09 06:00:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug