Source/WebKit2: [CoordinatedGraphics][EFL] Fix unhandled web process message when launching MiniBrowser https://bugs.webkit.org/show_bug.cgi?id=152048

Reviewed by Gyuyoung Kim.

WebPage should be initialized before updating preferences.

* UIProcess/API/C/CoordinatedGraphics/WKView.cpp:
(WKViewInitialize): Deleted.
* UIProcess/API/C/CoordinatedGraphics/WKView.h:
* UIProcess/API/efl/EwkView.cpp:
(EwkView::EwkView):
Calls WKViewSetIsActive instead of WKViewInitialize not to change the behavior
of EFL port.
* UIProcess/CoordinatedGraphics/WebView.cpp:
(WebKit::WebView::WebView):
Initialize just before creating WebPage because there is not use case to separate
initializing WebPage from creating in CoordinatedGraphics.
(WebKit::WebView::initialize): Deleted.
* UIProcess/CoordinatedGraphics/WebView.h:

Tools:
[EFL] Fix unhandled web process message when launching MiniBrowser
https://bugs.webkit.org/show_bug.cgi?id=152048

Reviewed by Gyuyoung Kim.

* TestWebKitAPI/Tests/WebKit2/CoordinatedGraphics/WKViewUserViewportToContents.cpp:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/170202@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193827 268f45cc-cd09-0410-ab3c-d52691b4dbfc